--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,9 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) 
+W3C CSS Validator results for responsive.css (CSS level 3 + SVG)
+Congratulations! No Error Found.
+This document validates as CSS level 3 + SVG !
+*/
+
 /*
  
       _______.  ______ .______       _______  _______ .__   __.      ______   .______       __   _______ .__   __. .___________.    ___   .___________. __    ______   .__   __. 
@@ -59,11 +65,7 @@
 
 /* Small devices (landscape phones, 576px and up) */
 
-@media (min-width: 576px) {
-    /* .callout-container {
-        background-position-y: 130px; 
-     } */
-}
+@media (min-width: 576px) {}
 
 /*___  ___.  _______  
  |   \/   | |       \ 
@@ -122,28 +124,27 @@
             padding-top: 220px;
             margin-left: 0px;
         }
-        .callout-container {
-            /* background-position: center center; */
-        }
         .lead {
-             margin: 77px -69px; 
+            margin: 77px -69px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
             align-items: center;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
             justify-content: center;
             font-size: 2.5vw;
             line-height: normal;
             position: unset;
-             margin-top: 361px;  
+            margin-top: 361px;
             margin-left: -148px;
         }
     }
 }
 
 @media screen and (min-width: 993px) and (max-width: 1024px) and (orientation: landscape) {
-    /* .callout-container {
-        background-position-x: 200px;
-        padding-left: 200px;
-    } */
     .lead {
         margin: 49px -69px;
     }
@@ -163,11 +164,8 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 
- @media (min-width: 1200px) {
-     .callout-container {
-       background-position: center center;
-    } 
-
-    
-} 
-
+@media (min-width: 1200px) {
+    .callout-container {
+        background-position: center center;
+    }
+}
